# cpgplotter

./: .gitignore  README.md  pyproject.toml
src/cpgplotter/: __init__.py  __main__.py  api.py  cli.py
src/cpgplotter/core/: __init__.py  annotations.py  config.py  coordinates.py  extraction.py  gene_annotation.py
src/cpgplotter/processing/: __init__.py  filtering.py  sorting.py
src/cpgplotter/rendering/: __init__.py  gene_track.py  heatmap.py  layout.py  overlays.py  side_axes.py
src/cpgplotter/utils/: __init__.py  io.py  validation.py
tests/: __init__.py  test_annotations.py  test_coordinates.py  test_integration.py  test_sorting.py  test_utils.py
