[project]
name = "cpgplotter"
version = "0.1.0"
description = "Visualize read-level CpG methylation patterns from long-read sequencing data"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["methylation", "epigenetics", "nanopore", "pacbio", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "numba>=0.63.0",
    "numpy>=2.2,<2.4",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "pysam>=0.23.3",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
cpgplotter = "cpgplotter.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/cpgplotter"
Repository = "https://github.com/yourusername/cpgplotter"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
